# colombian-spanish-transcriptions

./: .gitignore  README.md  madre_selva_links.txt  pyproject.toml  transcription_diarization.ipynb  video_links.txt
whisper_diarization/: __init__.py  diarize.py  output.py  pipeline.py  postprocess.py  utils.py
